// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div>
  <AdditionalDetailHeading>
    Disability Access
  </AdditionalDetailHeading>
  <AdditionalDetailContent>
    The Access Text
    <span>
      See
      <a
        href="http://some/link"
        rel="noopener"
        target="_blank"
      >
        this page
      </a>
      for full access details.
    </span>
  </AdditionalDetailContent>
</div>
`;

exports[`should render correctly when there is no disability link 1`] = `
<div>
  <AdditionalDetailHeading>
    Disability Access
  </AdditionalDetailHeading>
  <AdditionalDetailContent>
    The Access Text
  </AdditionalDetailContent>
</div>
`;
